--- a/src/app/modules/report-managment/exception-log/exception-log.component.html
+++ b/src/app/modules/report-managment/exception-log/exception-log.component.html
@@ -6,7 +6,7 @@
         <div class="col-lg-9 col-sm-12">
             <div class="heading">Exception Logs</div>
         </div>
-        <div class="col-lg-3 col-sm-12 self-center">
+        <div class="col-lg-3 col-sm-12 self-center mt-2">
             <p class="text-right">
                 <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
@@ -25,7 +25,7 @@
 
 
                 <div class="row">
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                             <mat-form-field appearance="outline" class=" w-full">
                                 <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search" autocomplete="off"
@@ -34,7 +34,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label>Choose start date</mat-label>
@@ -54,7 +54,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label>Choose end date</mat-label>
@@ -72,12 +72,9 @@
                             </mat-form-field>
                         </div>
                     </div>
-        
-                </div>
-                <div class="row pb-2">
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" mat-raised-button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                            <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" mat-raised-button class=" mt-2 bg-gray-500 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
                                     type="button"(click)="loadErrorLogs()">
                                 <mat-icon class="mr-2">search</mat-icon>
                                 Search
@@ -85,6 +82,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
       </div>
