--- a/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
+++ b/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
@@ -1,9 +1,13 @@
-<form [formGroup]="LoanAOPIForm" class="kt-form kt-form--group-seperator-dashed">
+<div class="kt-portlet">
+    <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
+        <div class="kt-portlet__head-label">
+            <h5 class="kt-portlet__head-title">Appraisal Of Proposed Investment</h5>
+        </div>
+    </div>
+
+    <form [formGroup]="LoanAOPIForm" class="kt-form kt-form--group-seperator-dashed">
   <div class="kt-form">
     <div class="kt-portlet__body">
-      <div class="kt-portlet__body-progress">
-        <mat-spinner [diameter]="20"></mat-spinner>
-      </div>
       <kt-alert *ngIf="hasFormErrors" type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
         Please enter valid Input
       </kt-alert>
@@ -78,7 +82,7 @@
               </tbody>
             </table>
           </div>
-          
+
         </div>
       </div>
       <div class="form-group kt-form__group row">
@@ -160,7 +164,7 @@
           </button>
         </div>
       </div>
-      
+
       <div class="form-group kt-form__group row">
         <div class="col-lg-12 kt-margin-bottom-20-mobile mat-table">
 
@@ -216,7 +220,7 @@
               </tbody>
             </table>
           </div>
-          
+
         </div>
       </div>
 
