--- a/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
+++ b/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
@@ -14,7 +14,7 @@
               <mat-label class="customMatLabel">Customers <strong class="matMandatory">*</strong></mat-label>
               <!--<input matInput formControlName="CustomerID">-->
               <mat-select formControlName="CustomerID">
-                <mat-option *ngFor="let obj of SelectedCustomersList" [value]="obj.CustLoanAppID">
+                <mat-option (click)="onChange(obj)" *ngFor="let obj of SelectedCustomersList" [value]="obj.CustLoanAppID">
                   {{obj.CustomerName}}
                 </mat-option>
               </mat-select>
@@ -125,7 +125,7 @@
                     <td>{{legal.PhoneCell}}</td>
                     <td>{{legal.Dob}}</td>
                     <td>{{legal.Relation}}</td>
-                    <td><button class="btn btn-xs btn-primary" (click)="onDeleteLegalHeirs(legal.UserID)">Delete</button></td>
+                    <td><button class="btn btn-xs btn-primary" (click)="onDeleteLegalHeirs(legal.UserID,i)">Delete</button></td>
                   </tr>
                 </tbody>
               </table>
