--- a/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
+++ b/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
@@ -3,13 +3,13 @@
 
     <div class="kt-portlet">
         <!--[ngClass]="{ 'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }"-->
-        <div style="display: flex;flex-direction: row;justify-content: space-between">
+        <div class="w-full flex">
 
-            <h3 class="kt-portlet__head-title">Location</h3>
+            <h3 class="heading w-11/12">Location</h3>
 
 
-            <button mat-icon-button color="accent" (click)="close(0)">
-                <mat-icon>cancel</mat-icon>
+            <button  class="w-1/12 text-end" color="danger" (click)="close(0)">
+                <mat-icon class="text-danger">cancel</mat-icon>
             </button>
         </div>
     </div>
@@ -20,13 +20,13 @@
             <div class="col-lg-12 col-md-12  mat-elevation-z8">
 
                 <!--            <label>Search</label>-->
-                <input matInput type="text" (keydown.enter)="$event.preventDefault()"
+                <input matInput class="" type="text" (keydown.enter)="$event.preventDefault()"
                        placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off"
                        spellcheck="off" type="text"
                        #search>
                                <agm-map #gm [zoom]="zoom" [latitude]="lat" [longitude]="lng"
                          [fullscreenControl]='true' [mapTypeControl]='true' [fitBounds]="true" (mapReady)="onMapReady($event)"
-                         style="height: 500px">
+                         class="h-screen">
                     <agm-marker *ngFor="let coordinate of start_end_mark; let i=index"
                                 [latitude]="isNumber(coordinate.Latitude)"
                                 [longitude]="isNumber(coordinate.Longitude)" [agmFitBounds]="true">
