--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">
-        <div class="col-lg-4 col-sm-12">
+        <div class="col-lg-4 col-sm-12 text-center my-auto">
             <!-- <mat-accordion>
                 <mat-expansion-panel hideToggle>
                     <mat-expansion-panel-header>
@@ -30,7 +30,7 @@
                     <search-loan-cases-by-cnic></search-loan-cases-by-cnic>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card class="cursor-pointer mx-4" id="llcInquiryText" routerLink="search-loan-case-by-cnic" class="font-bold text-lg"><p>Search
+            <mat-card class="cursor-pointer mx-4 d-flex" style="height:120px;" id="llcInquiryText" routerLink="search-loan-case-by-cnic" class="font-bold text-lg"><p class="align-items-center d-flex justify-content-center">Search
                 Loan Cases by CNIC</p></mat-card>
         </div>
 
