--- a/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
@@ -57,7 +57,7 @@
 
     <!-- Products list -->
     <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-18 overflow-hidden sm:overflow-y-auto">
+      <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto">
         <div class="form-group kt-form__group row" *ngIf="dataFetched==true && dataFound && dataFound">
 
           <div class="col-lg-12">
