--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -150,7 +150,7 @@
 
     <!-- Products list -->
     <div class="flex flex-auto overflow-scroll" style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-18 overflow-hidden sm:overflow-y-auto">
+      <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto">
         <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
           matSortActive="id" matSortDirection="asc" matSortDisableClear>
 
