--- a/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
+++ b/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
@@ -10,7 +10,7 @@
 
     <!-- Products list -->
     <div class="flex flex-auto overflow-y-scroll mx-10" style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-18 overflow-hidden sm:overflow-y-auto">
+      <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto">
         <div class="kt-portlet__head-label">
           <h5 class="kt-portlet__head-title" style="font-size: 18px !important;">Income</h5>
         </div>
