--- a/src/app/modules/loan/create-loan/create-loan.component.html
+++ b/src/app/modules/loan/create-loan/create-loan.component.html
@@ -10,7 +10,7 @@
 
     <!-- Products list -->
     <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-18 overflow-hidden sm:overflow-y-auto">
+      <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto">
         <mat-tab-group mat-align-tabs="start" (selectedTabChange)="onTabChangeClick($event)">
           <mat-tab label="Application Header">
             <kt-cl-application-header [loanAppHeaderDetails]="applicationHeaderDetail"  (applicationCall)="fillLoanApplicationObject($event)"></kt-cl-application-header>
