--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -56,7 +56,7 @@
   </div>
   <div class="flex flex-auto overflow-y-scroll">
     <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-18 overflow-hidden sm:overflow-y-auto">
+      <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto">
       
         <div class="form-group kt-form__group row" *ngIf="dataFetched && ApplicationORR.length>0">
           <div class="col-lg-12">
