--- a/src/app/modules/loan/search-dbr/search-dbr.component.html
+++ b/src/app/modules/loan/search-dbr/search-dbr.component.html
@@ -11,7 +11,7 @@
 
     <!-- Products list -->
     <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
-      <div class="flex flex-col flex-auto sm:mb-18 overflow-hidden sm:overflow-y-auto">
+      <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto">
         <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
           matSortActive="id" matSortDirection="asc" matSortDisableClear>
 
