--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -45,7 +45,7 @@
                     <bufrication-of-os-balances-lc></bufrication-of-os-balances-lc>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card routerLink="bifurction-of-os" class="cursor-pointer mx-4" id="llcInquiryText"><p
+            <mat-card (click)="bufrictionOfOSBalances()" class="cursor-pointer mx-4" id="llcInquiryText"><p
                 class="font-bold text-lg">Bifurcation of OS balances LC</p></mat-card>
         </div>
 
