--- a/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
+++ b/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
@@ -1,8 +1,9 @@
 <div id="Kt-portlet-margin-top">
     <div class="kt-portlet">
         <div class="kt-portlet__head kt-portlet__head__custom" id="list-header" style="display: flex;flex-direction: row;justify-content: space-between; margin-bottom: 10px;">
-            <div class="kt-portlet__head-label">
-                <h3 class="kt-portlet__head-title">Bifurcation of OS balances LC</h3>
+            <div class="kt-portlet__head-label flex w-full">
+                <h3 class="heading w-11/12">Bifurcation of OS balances LC</h3>
+                <button  class="text-end w-1/12"  (click)="close(0)"><mat-icon class="ml-2 text-white  p-3   bg-danger rounded-md">close</mat-icon></button>
             </div>
             <!-- <span (click)="close(0)"><mat-icon>close</mat-icon></span> -->
            
@@ -62,12 +63,8 @@
                             </mat-select>
                         </mat-form-field>
                     </div>
-
-                  </div>
-
-                  <div class="form-group kt-form__group row">
-
-                      <div class="col-lg-6 kt-margin-bottom-20-mobile">
+                    
+                    <div class="col-lg-6 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Working Date (ddMMyyyy)</mat-label>
                             <input matInput placeholder="Enter Working Date" formControlName="WorkingDate" maxlength="8" autocomplete="off"
@@ -82,7 +79,8 @@
                         </mat-form-field>
                       </div>
 
-                </div>
+                  </div>
+
 
                     <div class="form-group kt-form__group row">
 
@@ -100,12 +98,6 @@
                                 </mat-form-field>
                             </div>
                         </div>
-
-
-
-                    </div>
-
-                    <div class="form-group kt-form__group row">
                         <div class="col-lg-6 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -130,7 +122,6 @@
                             </mat-form-field>
                             </div>
                         </div>
-
                     </div>
 
 
@@ -145,7 +136,7 @@
     <div class="form-group kt-form__group row">
         <div class="col-lg-12 kt-margin-bottom-20-mobile mat-table mt-3 d-flex justify-between">
             <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
-            <button   class="mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"(click)="close(0)"><mat-icon class="mr-2">close</mat-icon>Cancel</button>
+
         </div>
       </div>
   
