--- a/src/app/modules/reports/loan-amounts-convert-to-default/loan-amounts-convert-to-default.component.html
+++ b/src/app/modules/reports/loan-amounts-convert-to-default/loan-amounts-convert-to-default.component.html
@@ -13,7 +13,7 @@
         <div class="col-lg-9 col-sm-12">
             <div class="heading">Loan amounts likely to be converted into default</div>
         </div>
-        <div class="col-lg-3 col-sm-12 self-center">
+        <div class="col-lg-3 col-sm-12 self-center mt-2">
             <p class="text-right">
                 <button
                     class="
@@ -43,7 +43,7 @@
         <div class="card card-body">
             <div class="py-2" [formGroup]="searchCnicForm">
                 <div class="row">
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline"
@@ -71,7 +71,7 @@
 
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -97,6 +97,28 @@
                                 </mat-select>
                             </mat-form-field>
                         </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-12">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">Circle</mat-label>
+
+                                <mat-select [(ngModel)]="selected_c" formControlName="CircleCode"
+                                            [disabled]="disable_circle">
+                                    <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"
+                                    >
+                                        {{circle?.CircleCode}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-12">
+                        <button class="mt-2 bg-gray-500" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
+                                mat-raised-button color="primary" (click)="find()">
+                            <mat-icon class="mr-2">search</mat-icon>
+                            Find
+                        </button>
                     </div>
 
                 </div>
@@ -128,34 +150,9 @@
 
                 </div> -->
 
-                <div class="row">
-                    <div class="col-lg-4 col-sm-12">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label class="customMatLabel">Circle</mat-label>
 
-                                <mat-select [(ngModel)]="selected_c" formControlName="CircleCode"
-                                            [disabled]="disable_circle">
-                                    <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"
-                                    >
-                                        {{circle?.CircleCode}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div>
-                    </div>
+            </div>
 
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
-                            mat-raised-button color="primary" (click)="find()">
-                        <mat-icon class="mr-2">search</mat-icon>
-                        Find
-                    </button>
-                </div>
-            </div>
         </div>
     </div>
 
