--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -30,7 +30,7 @@
                     <search-loan-cases-by-cnic></search-loan-cases-by-cnic>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card class="cursor-pointer mx-4" id="llcInquiryText" routerLink="search-loan-case-by-cnic" class="font-bold text-lg"><p>Search
+            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText" routerLink="search-loan-case-by-cnic"><p>Search
                 Loan Cases by CNIC</p></mat-card>
         </div>
 
@@ -45,8 +45,8 @@
                     <bufrication-of-os-balances-lc></bufrication-of-os-balances-lc>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card routerLink="bifurction-of-os" class="cursor-pointer mx-4" id="llcInquiryText"><p
-                class="font-bold text-lg">Bifurcation of OS balances LC</p></mat-card>
+            <mat-card routerLink="bifurction-of-os" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+                >Bifurcation of OS balances LC</p></mat-card>
         </div>
 
         <div class="col-lg-4 col-sm-12">
@@ -60,8 +60,8 @@
                     <updated-list-of-defaulters></updated-list-of-defaulters>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card routerLink="updated-list" class="cursor-pointer mx-4" id="llcInquiryText"><p
-                class="font-bold text-lg">Updated List of defaulters of a circle for each MCO</p></mat-card>
+            <mat-card routerLink="updated-list" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+                >Updated List of defaulters of a circle for each MCO</p></mat-card>
         </div>
     </div>
 
@@ -80,8 +80,8 @@
                     <fa-view-circle-wise></fa-view-circle-wise>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card routerLink="fa-view-wise" class="cursor-pointer mx-4" id="llcInquiryText"><p
-                class="font-bold text-lg">FAs will see Circle-Wise/Party Wise Early Warning reports on NPLs and
+            <mat-card routerLink="fa-view-wise" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+                >FAs will see Circle-Wise/Party Wise Early Warning reports on NPLs and
                 Charge-off loans for recovery persuasion.</p></mat-card>
         </div>
 
@@ -96,14 +96,14 @@
                     <early-warning-reports></early-warning-reports>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card routerLink="early-warning-reports" class="cursor-pointer mx-4" id="llcInquiryText"><p
-                class="font-bold text-lg">Early warning reports for MCOs</p></mat-card>
+            <mat-card routerLink="early-warning-reports" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+                >Early warning reports for MCOs</p></mat-card>
         </div>
 
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card routerLink="loan-amount" class="cursor-pointer mx-4" id="llcInquiryText"><p
-                class="font-bold text-lg">Loan amounts likely to be converted into default</p></mat-card>
+            <mat-card routerLink="loan-amount" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+                >Loan amounts likely to be converted into default</p></mat-card>
         </div>
 
     </div>
