--- a/src/app/zone-branch-circle/zone-branch-circle.component.html
+++ b/src/app/zone-branch-circle/zone-branch-circle.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="form">
+<div class="row" [formGroup]="form">
 
     <div class="col-lg-3 col-sm-12">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
