--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -45,8 +45,8 @@
                     <bufrication-of-os-balances-lc></bufrication-of-os-balances-lc>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card routerLink="bifurction-of-os" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
-                >Bifurcation of OS balances LC</p></mat-card>
+            <mat-card (click)="bufrictionOfOSBalances()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+               >Bifurcation of OS balances LC</p></mat-card>
         </div>
 
         <div class="col-lg-4 col-sm-12">
