--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -25,8 +25,8 @@
             <!-- Header -->
             <div [formGroup]="listForm" class="mt-2">
 
-                <div class="row">
-                    <div class="col-lg-3 col-sm-12">
+                <div class="flex" style="flex-wrap: wrap;">
+                    <div class="w-3/12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -36,14 +36,11 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col-lg-9 col-sm-12">
-                        <app-zone-branch-circle [form]="listForm" [should_show_circle]="true"
+                    <div class="w-9/12">
+                    <app-zone-branch-circle [form]="listForm" [should_show_circle]="true"
                                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     </div>
-                </div>
-                <div class="row">
-
-                    <div class="col-lg-3 col-sm-12">
+                    <div class="w-3/12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -65,7 +62,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-12">
+                    <div class="w-3/12 ml-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -86,7 +83,7 @@
                         </div>
 
                     </div>
-                    <div class="col-lg-3 col-sm-12">
+                    <div class="w-3/12 ml-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                             <button data-bs-toggle="collapse" data-bs-target="#collapseExample"
@@ -99,6 +96,10 @@
                         </div>
                     </div>
                 </div>
+
+
+
+
             </div>
         </div>
     </div>
