--- a/src/app/zone-branch-circle/zone-branch-circle.component.html
+++ b/src/app/zone-branch-circle/zone-branch-circle.component.html
@@ -1,6 +1,6 @@
-<div  [formGroup]="form">
+<div class="flex" [formGroup]="form">
 
-    <div class="col-lg-3 col-sm-12">
+    <div class="w-4/12 ml-2">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label class="customMatLabel">Zone</mat-label>
@@ -15,7 +15,7 @@
 
         </div>
     </div>
-    <div class="col-lg-3 col-sm-12">
+    <div class="w-4/12 ml-2">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
@@ -28,7 +28,7 @@
             </mat-form-field>
         </div>
     </div>
-    <div class="col-lg-3 col-sm-12" *ngIf="should_show_circle">
+    <div class="w-4/12 ml-2 " *ngIf="should_show_circle">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
