--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -25,7 +25,7 @@
 
     <div class="collapse" id="collapseExample">
         <div class="card card-body">
-            <div [formGroup]="customerSearch" class="mt-4">
+            <div [formGroup]="customerSearch">
 
                 <div>
 
